--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -91,12 +91,15 @@
 
     {% if files %}
         <!-- Refresh Button -->
-        <div class="button-wrapper">
-            <a href="{{ url_for('fetch_drive_files') }}" class="btn-link"><i class="fas fa-sync-alt" style="margin-right: 5px;"></i>Refresh</a>
+        <div class="button-container">
+            <a href="{{ url_for('fetch_drive_files') }}" class="btn-primary">
+                <i class="fas fa-sync-alt" style="margin-right: 5px;"></i>Refresh
+            </a>
+            <a href="{{ url_for('extract_all') }}" class="btn-secondary">
+                <i class="fas fa-database" style="margin-right: 5px;"></i>Save to Database
+            </a>
         </div>
-        <div class="button-wrapper">
-            <a href="{{ url_for('extract_all') }}" class="btn-link">Extract & Save All Timetables to Database</a>
-        </div>
+
 
         <h3>PDF Files from SOC Folder:</h3>
         <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
