--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -41,7 +41,7 @@
             <!-- Show Refresh + Save buttons when results exist -->
             <div class="button-container">
                 <div class="btn-primary">
-                    <button type="submit">Upload Lecturer Timetable</button>
+                    <i>Upload to Preview Lecturer Timetable</i>
                 </div>
                 {% if results %}
                     <a href="{{ url_for('fetch_drive_files') }}" class="btn-primary">
