--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -40,10 +40,10 @@
 
             <!-- Show Refresh + Save buttons when results exist -->
             <div class="button-container">
-                <button type="submit" class="btn-primary">
+                <button type="submit" class="btn-primary" style="justify-content: center;">
                     <i class="fas fa-upload" style="margin-right: 5px;"></i>Upload to Preview Lecturer Timetable
                 </button>
-                {% if results %}
+                {% if results %}        
                     <a href="{{ url_for('fetch_drive_files') }}" class="btn-primary">
                         <i class="fas fa-sync-alt" style="margin-right: 5px;"></i>Refresh
                     </a>
