--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -43,6 +43,9 @@
                 <button type="submit" class="btn-primary" style="justify-content: center;">
                     <i class="fas fa-upload" style="margin-right: 5px;"></i>Upload to Preview Lecturer Timetable
                 </button>
+            <div>
+                
+            <div class="button-container">
                 {% if results %}        
                     <a href="{{ url_for('fetch_drive_files') }}" class="btn-primary">
                         <i class="fas fa-sync-alt" style="margin-right: 5px;"></i>Refresh
