--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -38,11 +38,9 @@
             <input type="hidden" name="form_type" value="upload">
             <br>
 
-            <!-- Show Refresh + Save buttons when results exist -->
-            <div class="button-container">
-                <button type="submit" class="btn-primary" style="justify-content: center;">
-                    <i class="fas fa-upload" style="margin-right: 5px;"></i>Upload to Preview Lecturer Timetable
-                </button>
+            <!-- Upload Form Submit -->
+            <div class="button-wrapper">
+                <button type="submit">Upload and Preview Lecturer Timetable</button>
             </div>
 
             <div class="button-container">
