--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -57,7 +57,9 @@
                     {% for file in results %}
                         <div>
                             <button type="button" onclick="previewTimetable('{{ file.id }}')">Preview</button>
-                            {{ loop.index }}. {{ file.filename }}
+                            <a href="{{ file.webViewLink }}" target="_blank">
+                                {{ loop.index }}. {{ file.name }}
+                            </a>
                         </div>
                     {% endfor %}
                 </div>
@@ -93,7 +95,7 @@
         <!-- Refresh Button -->
         <div class="button-container">
             <a href="{{ url_for('reauthorize') }}" class="btn-warning">
-                <i class="fas fa-key" style="margin-right: 5px;"></i>Authorize Google Drive
+                <i class="fas fa-key" style="margin-right: 5px;"></i>Re-Authorize Google Drive
             </a>
             <a href="{{ url_for('fetch_drive_files') }}" class="btn-primary">
                 <i class="fas fa-sync-alt" style="margin-right: 5px;"></i>Refresh
