--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -56,7 +56,7 @@
                 <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
                     {% for file in results %}
                         <div>
-                            <button type="button" onclick="previewTimetable('{{ file.filename }}')">Preview</button>
+                            <button type="button" onclick="previewTimetable('{{ file.id }}')">Preview</button>
                             <a href="{{ file.webViewLink }}" target="_blank">
                                 {{ loop.index }}. {{ file.name }}
                             </a>
@@ -109,7 +109,7 @@
         <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
             {% for file in files %}
                 <div>
-                    <button type="button" onclick="previewTimetable('{{ file.filename }}')">Preview</button>
+                    <button type="button" onclick="previewTimetable('{{ file.id }}')">Preview</button>
                     <a href="{{ file.webViewLink }}" target="_blank">
                         {{ loop.index }}. {{ file.name }}
                     </a>
