--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -56,8 +56,10 @@
                 <div class="menu-grid" style="grid-template-columns: repeat(4, 1fr);">
                     {% for file in results %}
                         <div>
-                            <button type="button" onclick="previewUploadedTimetable('{{ file.filename }}', {{ file.data | tojson }})">Preview</button>
-                            {{ loop.index }}. {{ file.filename }}
+                            <button type="button" onclick="previewUploadedTimetable('{{ file.filename }}')">Preview</button>
+                            <a href="{{ file.webViewLink }}" target="_blank">
+                                {{ loop.index }}. {{ file.name }}
+                            </a>
                         </div>
                     {% endfor %}
                 </div>
