--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -61,6 +61,12 @@
                         </div>
                     {% endfor %}
                 </div>
+                <br><br>
+
+                <div id="uploadPreviewArea" style="max-height: 400px; overflow-y: auto; border:1px solid #ccc; padding:1%;">
+                    <h4>Preview Result</h4>
+                    <pre id="uploadPreviewContent">Click a preview button to load timetable...</pre>
+                </div>
             {% endif %}
         </div>
     </div>
